namespace SIS.Models.Assignment
{
    public enum AssignmentType
    {
        RESEARCH,
        MINOR,
        ENGINEERING
    }
}